<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LinearLayout">
    <Button
        android:id="@+id/button"
        android:text="@string/show_layouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/cb1"
            android:text="@string/radio_check"
            android:layout_width="240dp"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/cb2"
            android:text="@string/extended_buttons"
            android:layout_width="240dp"
            android:layout_height="wrap_content" />
        <RadioGroup
            android:id="@+id/rbg"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb1"
                android:text="@string/edu"
                android:layout_width="80dp"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/rb2"
                android:text="@string/victor"
                android:layout_width="80dp"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/rb3"
                android:text="@string/david"
                android:layout_width="80dp"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/result"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>